updated blog and cta

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -17,9 +17,9 @@
 .mainImage {
   width: 500px;
   transition: 0.2s;
-  border-radius: 5px;
+  border-radius: 20px;
   max-width: calc(100vw - 50px);
-  box-shadow: 0px 0px 2px black;
+  border-shadow: 0px 0px 2px black;
 }
 .post:hover .mainImage {
   width: 490px;
